--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "description": "",
   "devDependencies": {
     "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "@fastify/cors": "^9.0.1",
+    "fastify": "^4.28.1",
+    "tsx": "^4.17.0"
   }
 }
